@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         OOPS
-version:      0.1005
+version:      0.1006
 version_from: lib/OOPS.pm
 installdirs:  site
 requires:
