@@ -9,7 +9,8 @@ SYNOPSIS
                     dbi_dsn => $DBI_DSN, 
                     username => $username, 
                     password => $password,
-                    table_prefix => "MY";
+                    table_prefix => "MY",
+                    readonly => 0;
 
             $oops->commit;
 
@@ -280,6 +281,13 @@ PARAMETERS FOR NEW
         Three ways to specify the password for DBI: as an argument; as an
         OOPS environment variable; as a DBI environment variable. Not
         required for all databases.
+
+    "readonly"
+        If true, commit() will be disabled and the transaction isolation
+        level will be set to READ COMMITTED instead of SERIALIZABLE for the
+        databases where this matters (mysql, PostgreSQL). This should be
+        used if you plan to scan across all the data because otherwise the
+        whole database will end up locked.
 
     "table_prefix" / $ENV{OOPS_PREFIX}
         OOPS allows a prefix to be supplied for it's internal table names.
@@ -902,5 +910,5 @@ LICENSE
 
     You should have received a copy of the GNU General Public License along
     with this program; if not, write to the Free Software Foundation, Inc.,
-    59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+    51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
