@@ -1,3 +1,9 @@
+2006/09/19 0.1006 - minor tweaks
+
+	Added the readonly option. 
+
+	Updated the address for the GPL reference.
+
 2006/09/06 0.1005 - minor tweaks
 
 	Removed some extraneous debugging printouts
